--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,931 @@
-.App {
-  text-align: center;
+:root{
+    --clr-dark:#070a13 ;
+    --clr-light:#f1f5f9; 
+    --clr-rose: #e11d48;
+    --clr-slate400: #94a3b8;
+    --clr-slate600: #475569;
+    --clr-slate800: #1e293b;
+    --clr-indigo: #4f46e5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar{
+    display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    line-height: calc(1em + 0.5rem);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+html{
+    scroll-behavior: smooth;
 }
 
-.App-link {
-  color: #61dafb;
+body{
+    font-family: 'General Sans', sans-serif;
+    background-color:var(--clr-dark) ;
+    color: var(--clr-light);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img,
+svg,
+video,
+picture{
+    display: block;
+    max-width: 100%;
+    user-select: none;
 }
+
+a{
+    text-decoration: none;
+    color: var(--clr-rose);
+}
+
+strong{
+    color: var(--clr-indigo);
+    text-transform: uppercase;
+    font-weight: 600;
+}
+.container{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    /* border: 1px solid red; */
+}
+
+button{
+    display: inline-block;
+    padding: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: inherit;
+}
+
+.btn{
+    display: inline-block;
+    font-weight: 600;
+    text-decoration: none;
+    border-radius: 6px;
+    color: var(--clr-light);
+    background-color: var(--clr-rose);
+    padding: 0.5em 1em;
+    box-shadow: 0px 10px 20px rgba(225, 29, 72, 0.5), 
+    0 6px  6px rgba(225, 29, 72, 0.5), 0 0 100px -10px var(--clr-rose);
+    transition: transform 0.3s , box-shadow 0.3s;
+}
+
+.btn:hover{
+    transform: translateY(-3px);
+    box-shadow: 0px 14px 28px rgba(225, 29, 72, 0.25), 
+    0 10px  10px rgba(225, 29, 72, 0.22), 0 0 120px -10px var(--clr-rose);
+}
+
+.section{
+    margin-top: 2rem;
+}
+
+
+
+/* Header Section */
+
+
+.header{
+    /* position: fixed; */
+    /* top: 0; */
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    position: relative;
+    z-index: 99999;
+}
+
+.header__menu{
+    display: none;
+}
+
+.header__bars{
+    display: block;
+    width: 30px;
+    height: 30px;
+    color: var(--clr-light);
+    margin-right: 1rem;
+
+}
+
+
+
+
+/* Hero Section */
+
+.hero{
+    /* margin-top: 5rem; */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.hero__img{
+    width: 16rem; 
+    height: 16rem;
+    object-fit: contain;  
+    /* border-radius: 30%; */
+    display: inline-block;
+}
+
+.hero__subtitle{
+    color: var(--clr-slate600);
+    font-size: 17px;
+}
+
+.hero__title{
+    color: var(--clr-slate400);
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
+.hero__content{
+    color: var(--clr-slate600);
+    font-size: 18px;
+    max-width: 80ch;
+    text-align: justify;
+    padding: 20px;
+}
+
+.hero__btn{
+    margin-top: 0.5rem;
+    text-transform: capitalize;
+    font-size: 14px;
+    margin-bottom: 1rem;
+}
+
+
+/* About Section */
+
+.about{
+    /* margin-top: 2rem; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+section > h2{
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--clr-slate400);
+    font-size: 25px;
+}
+.about__left{
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+    max-width: 800px;
+    padding: 20px;
+}
+
+.about__left > h2{
+    text-transform: uppercase;
+    color: var(--clr-slate400);
+    font-size: 30px;
+    text-align: center;    
+}
+
+.about__left > h4{
+    color: var(--clr-slate400);
+    text-transform: uppercase;
+}
+
+.about__left > p{
+    color: var(--clr-slate600);
+    font-size: 15px;
+    text-align: justify;
+}
+
+.about__techknowledge{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about__ul{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    list-style: '\2713';
+    padding-left: 1em;
+}
+
+.about__list{
+    color: var(--clr-slate600);
+    font-size: 15px;
+}
+
+.about__list::before{
+    content: '';
+    margin-left: 0.5em;
+}
+
+.about__right{
+    padding: 20px;
+}
+
+.about__image{
+    border-radius: 6px;
+    max-width: 400px;
+    /* min-width: 250px; */
+    /* height: 400px; */
+}
+
+
+
+
+/* Work Section */
+
+.work{
+    gap: 1rem;
+}
+.work__img__container{
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 10px;
+}
+.work__img, .project__img, .about__right {
+    position: relative;
+    cursor: pointer;
+}
+
+.work__img::after, .project__img::after {
+    content: '';
+    /* background-color: rgba(79, 70, 229, 0.4);  */
+    background-color: rgba(6, 5, 5, 0.9);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+     z-index: 1; 
+    transition: background-color 0.3s;
+} 
+
+.work__img:hover:after, .project__img:hover::after{
+    content: '';
+    background-color: rgba(79, 70, 229, 0.1); 
+} 
+
+/* Contact Section */
+
+label, input{
+    display: block;
+}
+input{
+    background: none;
+    border: none;
+    outline: none;
+}
+
+.contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 4rem;
+}
+
+.contact__title{
+    margin-bottom: 2rem;
+    font-size: 25px;
+}
+
+.contact__form{
+    border-radius: 6px;
+    background: #1e293b;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 28px;
+    filter: drop-shadow(4px 5px 10px #1e293b);
+
+}
+
+.contact__input{
+    border: 1px solid white;
+    width: 20rem;
+    height: 40px;
+    border-radius: 6px;
+    color: white;
+}
+
+.contact__textarea{
+    background: none;
+    width: 20rem;
+    border-radius: 6px;
+    color: white;
+    border: 1px solid white;
+}
+
+.contact__btn{
+    color: white;
+    text-align: center;
+    width: 150px;
+    background-color: var(--clr-rose);
+    padding: 10px;
+    border-radius: 6px;
+    font-size: 15px;
+    text-transform: uppercase;
+    transition: transform 0.3s , box-shadow 0.3s;
+    filter: drop-shadow(2px 4px 5px var(--clr-rose));
+}
+
+.contact__btn:hover{
+    transform: translateY(-3px);
+    filter: drop-shadow(2px 4px 5px var(--clr-rose));
+}
+
+/* Projects Section */
+
+.project1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 2rem;
+}
+
+.flex1{
+    flex: 1;
+}
+
+.project__btn{
+    margin-top: 20px;
+    text-transform: capitalize;
+    font-size: 15px;
+}
+
+/* Footer Section */
+
+.footer{
+    text-align: center;
+    /* background-color: #1e293b; */
+    /* filter: drop-shadow(5px 5px 10px #F5F1F1); */
+    filter: drop-shadow(5px 5px 7px var(--clr-rose));
+    margin-bottom: 20px;
+    font-size: 15px;
+}
+
+
+
+.mobile-nav{
+    position: absolute;
+    /* border: 1px solid red; */
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: var(--clr-dark);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s;
+}
+
+.clicked-mobile-nav{
+    position: absolute;
+    /* border: 1px solid red; */
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: var(--clr-dark);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-3px);
+    transition: transform 0.3s;
+}
+
+.mobile-nav-menu{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.mobile-nav-link{
+    font-size: 17px;
+    font-weight: 600;
+    color: var(--clr-slate600);
+}
+
+.mobile-nav-line{
+    border: 1px solid var(--clr-slate600);
+    padding-right: 1.5em;
+}
+
+.mobile-nav-sun{
+    display: block;
+    width: 1.5rem;
+    height: 1.5rem;
+    color: var(--clr-slate600);
+}
+
+
+.mobile-nav-resume{
+    font-size: 15px;
+}
+
+/* Media Queries */
+
+@media (min-width:320px){
+    .container{
+        max-width: 320px;
+    }
+        
+    .hero{
+        gap: 0rem;
+    }
+
+    .hero__img{
+        width: 12rem; 
+        height: 12rem;
+    }
+
+    .hero__subtitle{
+        font-size: 15px;
+    }
+
+    .hero__title{
+        font-size: 26px;
+    }
+
+    .hero__content{
+        /* margin-top: 0; */
+        font-size: 14px;
+        padding: 5px;
+        text-align: justify;
+    }
+
+    .hero__content::first-letter{
+        font-size: 18px;
+    }
+
+    .hero__btn{
+        margin-top: 0;
+        font-size: 11px;
+    }
+    .about{
+        gap: 1rem;
+    }
+    #about > h2{
+        font-size: 20px;
+    }
+    .about__left > p{
+        font-size: 14px;
+    }
+    .about__image{
+        width: 200px;
+    }
+    .work > h2{
+        font-size: 20px;
+    }
+    .work__img{
+        padding: 15px;
+    }
+    .project > h2{
+        font-size: 20px;
+    }
+    .project__img{
+        margin: 15px;
+    }
+    .project__content{
+        padding: 5px;
+        text-align: justify;
+        color: var(--clr-slate600);
+        font-size: 14px;
+    }
+    .project__btn{
+        font-size: 13px;
+    }
+    .contact > h2{
+        font-size: 20px;
+    }
+    .contact__input{
+        width: 15rem;
+        height: 40px;
+        font-size: 14px;
+    }
+    .contact__form > label{
+        font-size: 14px;
+    }
+    .contact__textarea{
+        width: 15rem; 
+        font-size: 14px;   
+    }
+    
+    .contact__btn{
+        width: 120px;
+        padding: 5px;
+        font-size: 13px;
+    }
+    .footer{
+        font-size: 13px;
+    }
+}
+
+@media (min-width:375px){
+    .container{
+        max-width: 375px;
+    }
+    .contact > h2, #about > h2 , .project > h2{
+        font-size: 25px;
+    }
+    .about__image{
+        width: 250px;
+    }
+    .project__content{
+        color: var(--clr-slate600);
+        padding: 15px;
+        text-align: justify;
+    }
+    .contact__form{
+        gap: 1rem;
+    }
+    .contact__input{
+        width: 15rem;
+        height: 40px;
+    }
+    
+    .contact__textarea{
+        width: 15rem;    
+    }
+    
+    .contact__btn{
+        width: 100px;
+        padding: 5px;
+        font-size: 12px;
+    }
+    .footer{
+        font-size: 13px;
+    }
+}
+
+@media(min-width:475px){
+    .container{
+        max-width: 475px;
+    }
+        
+    .hero{
+        gap: 0.4rem;
+    }
+
+    .hero__img{
+        width: 15rem; 
+        height: 15rem;
+    }
+
+    .hero__subtitle{
+        font-size: 17px;
+    }
+
+    .hero__title{
+        font-size: 30px;
+    }
+
+    .hero__content{
+        font-size: 15px;
+        text-align: justify;
+    }
+
+    .hero__content::first-letter{
+        font-size: 20px;
+    }
+
+    .hero__btn{
+        font-size: 13px;
+    }
+    .about{
+        gap: 1.5rem;
+    }
+    .about__image{
+        width: 300px;
+    }
+    .work__img__container{
+        padding: 30px;
+    }
+    .work__img{
+        padding: 20px;
+    }
+    .contact__form{
+        margin-left: 3em;
+        margin-right: 3em;
+    }
+    .project__img{
+        margin: 40px;
+    }
+    .project__content{
+        margin-left: 20px;
+        margin-right: 20px;
+        text-align: justify;
+        color: var(--clr-slate600);
+        font-size: 15px;
+    }
+    .contact__input{
+        width: 17rem;
+        height: 40px;
+    }
+    
+    .contact__textarea{
+        width: 17rem;    
+    }
+    
+    .contact__btn{
+        width: 120px;
+        padding: 5px;
+        font-size: 13px;
+    }
+    .footer{
+        font-size: 15px;
+    }
+}
+
+
+
+@media(min-width:640px){
+    .container{
+        max-width: 640px;
+    }
+    .hero{
+        gap: 0.4rem;
+    }
+
+    .hero__img{
+        width: 15rem; 
+        height: 15rem;
+    }
+
+    .hero__subtitle{
+        font-size: 19px;
+    }
+
+    .hero__title{
+        font-size: 40px;
+    }
+
+    .hero__content{
+        font-size: 16px;
+    }
+
+    .hero__content::first-letter{
+        font-size: 25px;
+    }
+
+    .hero__btn{
+        font-size: 14px;
+    }
+    .about{
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .about__left > p{
+        font-size: 16px;
+    }
+    .about__image{
+        width: 350px;
+    }
+    .work__img__container{
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    }
+    .work__img__container{
+        padding: 30px;
+    }
+    .work__img{
+        padding: 20px;
+    }
+    .contact__form{
+        margin-left: 4em;
+        margin-right: 4em;
+    }
+    .project__content{
+        font-size: 16px;
+    }
+    .contact__input{
+        width: 19rem;
+        height: 40px;
+    }
+    
+    .contact__textarea{
+        width: 19rem;    
+    }
+    
+    .contact__btn{
+        width: 130px;
+        padding: 5px;
+        font-size: 14px;
+    }
+    
+}
+
+@media(min-width:768px){
+
+    .container{
+        max-width: 768px;
+    }
+    
+    .header__menu{
+        display: flex;
+        list-style: none;
+        align-items: center;
+        /* border: 1px solid red; */
+        margin: 0;
+        gap: 2em;
+    }
+
+    .header__link{
+        text-decoration: none;
+        color: var(--clr-slate600);
+        transition: color 0.3s;
+    }
+
+    .header__link:hover{
+        color: var(--clr-rose);
+    }
+
+    .header__line{
+        border-left: 1px solid var(--clr-slate600);
+        padding-top: 1.5rem;
+    }
+
+    .header__sun{
+        display: block;
+        color: var(--clr-slate600);
+        width: 20px;
+        height: 20px;
+    }
+
+    .header__resume{
+        display: block;
+        font-size: 15px;
+        margin-right: 1rem;
+    }
+    
+    .header__bars{
+        display: none;
+    }
+
+    .hero{
+        gap: 0.4rem;
+    }
+
+    .hero__img{
+        width: 15rem; 
+        height: 15rem;
+    }
+
+    .hero__subtitle{
+        font-size: 20px;
+    }
+
+    .hero__title{
+        font-size: 70px;
+        text-transform: capitalize;
+    }
+
+    .hero__content{
+        font-size: 18px;
+    }
+
+    .hero__content::first-letter{
+        font-size: 25px;
+    }
+
+    .hero__btn{
+        font-size: 15px;
+    }
+    .about__left > p{
+        font-size: 18px;
+    }
+    .about__image{
+        width: 350px;
+    }
+    .work__img__container{
+        padding: 30px;
+    }
+    .work__img{
+        padding: 20px;
+    }
+    .project__content{
+        font-size: 18px;
+    }
+    .contact__input{
+        width: 20rem;
+        height: 40px;
+    }
+    
+    .contact__textarea{
+        width: 20rem;    
+    }
+    
+    .contact__btn{
+        width: 130px;
+        padding: 8px;
+        font-size: 15px;
+    }
+
+}
+
+@media(min-width:1024px){
+    .container{
+        max-width: 1024px;
+    }
+    .hero{
+        gap: 0.1rem;
+    }
+
+    .hero__img{
+        width: 15rem; 
+        height: 15rem;
+    }
+
+    .hero__subtitle{
+        font-size: 22px;
+    }
+
+    .hero__title{
+        font-size: 80px;
+        text-transform: capitalize;
+    }
+
+    .hero__content{
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .hero__content::first-letter{
+        font-size: 30px;
+    }
+
+    .hero__btn{
+        font-size: 15px;
+    }
+    .about{
+        flex-direction: row;
+    }
+    .about__left > p{
+        font-size: 20px;
+        max-width: 90ch;
+    }
+    .about__image{
+        width: 400px;
+    }
+    section > h2{
+        font-size: 30px;
+    }
+    .work__img__container{
+        padding: 30px;
+    }
+    .work__img{
+        padding: 20px;
+    }
+    .project1{
+        flex-direction: row;
+        gap: 0.5rem;
+    }
+    .project__img{
+        margin: 25px;
+    }
+    .project__content{
+        font-size: 20px;
+    }
+    .footer{
+        font-size: 16px;
+    }
+    
+}
+
+
+
+/* @media(min-width:1536px){
+    .container{
+        max-width: 1536px;
+    }
+} */
